feat: new collision api